# aelm-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  lefthook.yml
docs/: circuit-patterns.md  cli-reference.md  common-mistakes.md  drc-rules.md  dsl-reference.md  style-reference.md
scripts/: check-test-quality.sh
src/: cli_runner.rs  error.rs  lib.rs  main.rs  server.rs
src/prompts/: mod.rs
src/resources/: docs.rs  mod.rs
src/tools/: advanced.rs  docs.rs  edit.rs  examples.rs  generate.rs  library.rs  mod.rs  parse.rs  parts.rs  project.rs  render.rs  symbols.rs
tests/: integration.rs  server_mcp.rs
tests/fixtures/: rc_filter.aelm
